--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.3.16",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
